--- a/resumebuilder.html
+++ b/resumebuilder.html
@@ -4,10 +4,10 @@
     <title>Resume Builder</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat"  rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="resumebuilder.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="resumebuilder.css">
   </head>
   <body>
   
@@ -19,7 +19,7 @@
         <i class="fa fa-remove"></i>
       </a>
       <div class="w3-bar-block w3-center">
-        <a href="home.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Home</a>
+        <a href="index.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Home</a>
         <a href="about.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">About</a>
         <a href="qualifications.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Qualifications</a>
 		<a href="contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact Us</a>
@@ -27,7 +27,7 @@
       </div>
     </nav>
     <!-- !PAGE CONTENT! -->
-    <div class="w3-content" style="max-width:1500px">
+    <div class="w3-content" style="max-width: 100%">
       <!-- Header -->
       <div class="w3-opacity">
         <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()">
@@ -53,7 +53,7 @@
     </div>
 	
 	<!-- Footer -->
-    <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px">
+    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-xlarge" style="margin-top:128px">
       <i class="fa fa-facebook-official w3-hover-opacity"></i>
       <i class="fa fa-instagram w3-hover-opacity"></i>
       <i class="fa fa-snapchat w3-hover-opacity"></i>
