--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,7 @@
         <i class="fa fa-remove"></i>
       </a>
       <div class="w3-bar-block w3-center">
-        <a href="home.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Home</a>
+        <a href="index.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Home</a>
         <a href="about.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">About</a>
         <a href="qualifications.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Qualifications</a>
 		<a href="contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact Us</a>
@@ -25,7 +25,7 @@
       </div>
     </nav>
     <!-- !PAGE CONTENT! -->
-    <div class="w3-content" style="max-width:1500px">
+    <div class="w3-content" style = "max-width: 100%">
       <!-- Header -->
       <div class="w3-opacity">
         <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()">
@@ -39,7 +39,7 @@
         </header>
       </div>
     </div>
-    <div class="w3-container w3-padding-64">
+    <div class="w3-container" style = "max-width: 100%">
       <main>
 		<!-- Sign In Section -->
         <section>
@@ -73,7 +73,7 @@
       </main>
     </div>
     <!-- Footer -->
-    <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px">
+    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-xlarge" style="margin-top:128px">
       <i class="fa fa-facebook-official w3-hover-opacity"></i>
       <i class="fa fa-instagram w3-hover-opacity"></i>
       <i class="fa fa-snapchat w3-hover-opacity"></i>
