--- a/resumebuilder.html
+++ b/resumebuilder.html
@@ -43,6 +43,20 @@
           </p>
           <p class="w3-padding-16">
 		  <!-- User Input URL -->
+		    <label for="url-input">Past Experience:</label>
+			<input type="text" id="url-input" name="past-experience-text">
+		  
+			<label for="url-input">Job Title</label>
+			<input type="text" id="url-input" name="past-experience-text">
+			
+			<label for="cars">What do you want generated?</label>
+
+			<select name="Drop-Down" id="Drop-Down">
+				<option value="Resume">Resume</option>
+				<option value="Cover Letter">Cover Letter</option>
+			</select>
+			
+			
 			<label for="url-input">Enter URL:</label>
 			<input type="url" id="url-input" name="url">
 			</p>
