--- a/signin.html
+++ b/signin.html
@@ -19,7 +19,7 @@
       <div class="w3-bar-block w3-center">
         <a href="index.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Home</a>
         <a href="about.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">About</a>
-        <a href="qualifications.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Qualifications</a>
+        <a href="qualifications.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Resume/Job Info</a>
 		<a href="contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact Us</a>
         <a href="signin.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Sign In/Register</a>
       </div>
