--- a/qualifications.html
+++ b/qualifications.html
@@ -85,7 +85,7 @@
       <i class="fa fa-facebook-official w3-hover-opacity"></i>
       <i class="fa fa-instagram w3-hover-opacity"></i>
       <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+      <!-- <i class="fa fa-pinterest-p w3-hover-opacity"></i> -->
       <i class="fa fa-twitter w3-hover-opacity"></i>
       <i class="fa fa-linkedin w3-hover-opacity"></i>
     </footer>
